    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====

    ==> 89 - 03/09/2006 <==

B <mave> fixed errors in PoolUpdater::clone() implementation
+ <mave> added Properties 'inputs' and 'outputs' to Cluster class
C <mave> re-arranging method declaration in Cluster.h using doxygen groups
+ <mave> added Property 'name' to Updtable class
C <mave> Updatable inherits from Propertized now
+ <mave> added const char* (constant string) type support to Variant; changed ionnfw for handling the new type

    ==> 88 - 02/09/2006 <==

+ <mave> added ionnfw.h module that contains all functions regarding input/output operation;
        it contains overloaded operators << for almost all types of NNFW; not yet full implemented
B <mave> fixed memory leak in Updatable and BaseTeachBlock implementations
C <mave> continuing developing of Property feature

    ==> 87 - 29/08/2006 <==

B <mave> fixes in Propertized compiling

    ==> 86 - 29/08/2006 <==

B <marco> fix observ.h 

    ==> 85 - 29/08/2006 <==

+ <mave> a draft of future support of properties of class
C <mave> setUpdater() method of Cluster is changed; now it requires only a reference to ClusterUpdater
        and it'll create an internal copy of ClusterUpdater via clone() method; so it's possible to
        pass temporary object to setUpdater() now
C <mave> ClusterUpdater inherits from Clonable too
+ <mave> added the PoolUpdater, a special ClusterUpdater that allow to set different ClusterUpdater for
        different neurons; it implements the capability below dropped from Cluster
C <mave> from Cluster was dropped the possibility to set different ClusterUpdater for different neurons,